<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/my_first_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:text="@string/count_down"/>

    <TextView
        android:id="@+id/my_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/time_setting"/>

    <EditText
        android:id="@+id/my_edit_tex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_margin="30dp"
        android:inputType="number"
        android:hint="@string/minute"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/my_edit_tex2"
        app:layout_constraintLeft_toLeftOf="@id/my_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/my_edit_text"
        app:layout_constraintTop_toTopOf="@id/my_edit_text"
        android:text=":"/>

    <EditText
        android:id="@+id/my_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.6"
        android:hint="@string/second"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="36dp"
        app:layout_constraintHorizontal_bias="0.2"
        android:text="@string/start"/>

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="36dp"
        app:layout_constraintHorizontal_bias="0.80"
        android:text="@string/pause"/>

    <TextView
        android:id="@+id/remain_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        android:layout_margin="50dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/remained"/>


    <TextView
        android:id="@+id/time_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remain_time"
        android:layout_margin="40sp"
        android:textColor="@color/yello"
        android:text=""/>






</android.support.constraint.ConstraintLayout>